lbu_filesdir = $(datadir)/liblouisutdml/lbu_files

lbu_files_DATA = \
	doc.sem \
	document-content.sem \
	sample-utd.cfg \
	transinxml.cfg \
	brf.cfg \
	viewxml.cfg \
	viewxml.ctb \
	volumes.cfg \
	marburg.cfg \
	marburg.sem \
	article.sem \
	book.sem \
	chapter.sem \
	liblouisutdml.ini \
	preferences.cfg \
	dtbook.sem \
	dtbookutd.sem \
	utd.sem \
	document.sem \
	dtbook3.sem \
	gutbook.sem \
	html.sem \
	math.sem \
	nemeth.sem \
	package.sem \
	preface.sem \
	set.sem \
	ThML.sem \
	ukmaths.sem \
	ukmaths.cfg \
	wordDocument.sem \
	Workbook.sem \
	w_wordDocument.sem

EXTRA_DIST = \
	$(lbu_files_DATA)
