lbu_filesdir = $(datadir)/liblouisutdml/lbu_files

lbu_files_DATA =				\
	article.sem				\
	book.sem				\
	brf.cfg					\
	chapter.sem				\
	doc.sem					\
	document-content.sem			\
	document.sem				\
	docx.sem				\
	dtbook.sem				\
	dtbook3.sem				\
	dtbookutd.sem				\
	gutbook.sem				\
	html.sem				\
	liblouisutdml.ini			\
	marburg.cfg				\
	marburg.sem				\
	math.sem				\
	nemeth.cfg				\
	nemeth.sem				\
	nimas.cfg				\
	nimas.sem				\
	package.sem				\
	preface.sem				\
	preferences.cfg				\
	sample-utd.cfg				\
	set.sem					\
	ThML.sem				\
	transinxml.cfg				\
	ukmaths.cfg				\
	ukmaths.sem				\
	utd.sem					\
	viewxml.cfg				\
	viewxml.ctb				\
	volumes.cfg				\
	w_wordDocument.sem			\
	wordDocument.sem			\
	Workbook.sem

EXTRA_DIST = \
	$(lbu_files_DATA)
