lbu_filesdir = $(datadir)/liblouisutdml/lbu_files

lbu_files_DATA =				\
	article.sem				\
	book.sem				\
	brf.cfg					\
	chapter.sem				\
	doc.sem					\
	document-content.sem			\
	document.sem				\
	docx.sem				\
	dtbook.sem				\
	dtbook3.sem				\
	dtbookutd.sem				\
	gutbook.sem				\
	html.sem				\
	liblouisutdml.ini			\
	marburg.cfg				\
	marburg.ctb				\
	marburg.sem				\
	marburg_edit.ctb			\
	math.sem				\
	nemeth.cfg				\
	nemeth.ctb				\
	nemeth.sem				\
	nemeth_edit.ctb				\
	nimas.cfg				\
	nimas.sem				\
	package.sem				\
	preface.sem				\
	preferences.cfg				\
	sample-utd.cfg				\
	set.sem					\
	ThML.sem				\
	transinxml.cfg				\
	ukmaths.cfg				\
	ukmaths.ctb				\
	ukmaths.sem				\
	ukmaths_edit.ctb			\
	utd.sem					\
	viewxml.cfg				\
	viewxml.ctb				\
	volumes.cfg				\
	w_wordDocument.sem			\
	wiskunde.ctb				\
	wiskunde.sem				\
	wiskunde_edit.ctb			\
	wordDocument.sem			\
	Workbook.sem

EXTRA_DIST = \
	$(lbu_files_DATA)
